<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/handbook_children_ico"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_1"
            android:textColor="#413e3e"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developername"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <TextView
            android:fontFamily="Catamaran_Regular"
            android:layout_width="match_parent"
            android:background="#362d2e"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/developername"
            android:text="@string/developerdetais"
            android:textSize="17dp" />

        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_2"
            android:textColor="#413e3e"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/college"
            android:textSize="20dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_3"
            android:textColor="#413e3e"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="20dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_4"
            android:textColor="#413e3e"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Ezhilweb"
            android:textColor="#FFFFFF"
            android:background="#362d2e"/>
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/website"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/EzhilSite"
            android:textSize="20dp"
            android:textColor="#0949af"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Ezhilblog"
            android:textColor="#FFFFFF"
            android:background="#362d2e"/>
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/blog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ezhilblogsite"
            android:textSize="20dp"
            android:textColor="#0949af"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/EzhilSource"
            android:textColor="#FFFFFF"
            android:background="#362d2e"/>
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_8"
            android:textColor="#413e3e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EzhilSourcedesc"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ezhilgit"
            android:textSize="18dp"
            android:textColor="#0949af"/>
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/license"
            android:textColor="#FFFFFF"
            android:background="#362d2e"/>
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_A"
            android:textColor="#413e3e"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licensedesc"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/license"
            android:textColor="#0949af"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licensetext"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:id="@+id/about_B"
            android:textColor="#413e3e"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Appsourcedesc"
            android:textSize="15dp"
            />
        <TextView
            android:fontFamily="Catamaran_Regular"
            android:textColor="#0949af"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Appsourcegit"
            android:textSize="14dp"
            android:id="@+id/appsource"
            />
    </LinearLayout>
</ScrollView>